improvements ni matt

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,6 +14,7 @@
         <div class="logo">PC Builder Pro</div>
         <nav>
             <a href="{{ url_for('landing_page_route') }}" class="mica-item nav-item">Home</a>
+            <a href="{{ url_for('assembly_guide_page') }}" class="mica-item nav-item">Assembly Guide</a>
             <a href="{{ url_for('builder_page') }}" class="mica-item nav-item">Builder</a>
             <a href="{{ url_for('os_guide') }}" class="mica-item nav-item">OS Guide</a>
         </nav>
